source/packages/expressions/src/generated/parser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/

import {
  argList,
  binaryNode,
  boolNode,
  callSuffix,
  escapeChar,
  holeNode,
  indexSuffix,
  memberSuffix,
  nameNode,
  nullNode,
  numberNode,
  parenNode,
  postfixNode,
  projectSuffix,
  str,
  stringNode,
  templateNode,
  ternaryNode,
  textNode,
  unaryNode,
} from '#nodes'

class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message)
    this.expected = expected
    this.found = found
    this.location = location
    this.name = 'SyntaxError'
  }

  format(sources) {
    let str = 'Error: ' + this.message
    if (this.location) {
      let src = null
      const st = sources.find((s) => s.source === this.location.source)
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g)
      }
      const s = this.location.start
      const offset_s =
        this.location.source && typeof this.location.source.offset === 'function'
          ? this.location.source.offset(s)
          : s
      const loc = this.location.source + ':' + offset_s.line + ':' + offset_s.column
      if (src) {
        const e = this.location.end
        const filler = ''.padEnd(offset_s.line.toString().length, ' ')
        const line = src[s.line - 1]
        const last = s.line === e.line ? e.column : line.length + 1
        const hatLen = last - s.column || 1
        str +=
          '\n --> ' +
          loc +
          '\n' +
          filler +
          ' |\n' +
          offset_s.line +
          ' | ' +
          line +
          '\n' +
          filler +
          ' | ' +
          ''.padEnd(s.column - 1, ' ') +
          ''.padEnd(hatLen, '^')
      } else {
        str += '\n at ' + loc
      }
    }
    return str
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase()
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, 'unicode')
      ? new RegExp('[\\p{C}\\p{Mn}\\p{Mc}]', 'gu')
      : null
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable, (ch) => '\\u{' + hex(ch) + '}')
      }
      return s
    }

    function literalEscape(s) {
      return unicodeEscape(
        s
          .replace(/\\/g, '\\\\')
          .replace(/"/g, '\\"')
          .replace(/\0/g, '\\0')
          .replace(/\t/g, '\\t')
          .replace(/\n/g, '\\n')
          .replace(/\r/g, '\\r')
          .replace(/[\x00-\x0F]/g, (ch) => '\\x0' + hex(ch))
          .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => '\\x' + hex(ch)),
      )
    }

    function classEscape(s) {
      return unicodeEscape(
        s
          .replace(/\\/g, '\\\\')
          .replace(/\]/g, '\\]')
          .replace(/\^/g, '\\^')
          .replace(/-/g, '\\-')
          .replace(/\0/g, '\\0')
          .replace(/\t/g, '\\t')
          .replace(/\n/g, '\\n')
          .replace(/\r/g, '\\r')
          .replace(/[\x00-\x0F]/g, (ch) => '\\x0' + hex(ch))
          .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => '\\x' + hex(ch)),
      )
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return '"' + literalEscape(expectation.text) + '"'
      },

      class(expectation) {
        const escapedParts = expectation.parts.map((part) =>
          Array.isArray(part)
            ? classEscape(part[0]) + '-' + classEscape(part[1])
            : classEscape(part),
        )

        return (
          '[' +
          (expectation.inverted ? '^' : '') +
          escapedParts.join('') +
          ']' +
          (expectation.unicode ? 'u' : '')
        )
      },

      any() {
        return 'any character'
      },

      end() {
        return 'end of input'
      },

      other(expectation) {
        return expectation.description
      },
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation)
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation)
      descriptions.sort()

      if (descriptions.length > 0) {
        let j = 1
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i]
            j++
          }
        }
        descriptions.length = j
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0]

        case 2:
          return descriptions[0] + ' or ' + descriptions[1]

        default:
          return (
            descriptions.slice(0, -1).join(', ') + ', or ' + descriptions[descriptions.length - 1]
          )
      }
    }

    function describeFound(found) {
      return found ? '"' + literalEscape(found) + '"' : 'end of input'
    }

    return 'Expected ' + describeExpected(expected) + ' but ' + describeFound(found) + ' found.'
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {}

  const peg$FAILED = {}
  const peg$source = options.grammarSource

  const peg$startRuleFunctions = {
    Template: peg$parseTemplate,
    ExpressionEntry: peg$parseExpressionEntry,
  }
  let peg$startRuleFunction = peg$parseTemplate

  const peg$c0 = '{{'
  const peg$c1 = '}}'
  const peg$c2 = '('
  const peg$c3 = ')'
  const peg$c4 = '?'
  const peg$c5 = ':'
  const peg$c6 = '??'
  const peg$c7 = '||'
  const peg$c8 = '&&'
  const peg$c9 = '=='
  const peg$c10 = '!='
  const peg$c11 = '<='
  const peg$c12 = '>='
  const peg$c13 = '!'
  const peg$c14 = '='
  const peg$c15 = '-'
  const peg$c16 = '.'
  const peg$c17 = '['
  const peg$c18 = ']'
  const peg$c19 = ','
  const peg$c20 = 'true'
  const peg$c21 = 'false'
  const peg$c22 = 'null'
  const peg$c23 = "'"
  const peg$c24 = '"'
  const peg$c25 = '\\'

  const peg$r0 = /^[<>]/
  const peg$r1 = /^[+\-]/
  const peg$r2 = /^[%*\/]/
  const peg$r3 = /^[a-zA-Z_]/
  const peg$r4 = /^[a-zA-Z0-9_]/
  const peg$r5 = /^[0-9]/
  const peg$r6 = /^[eE]/
  const peg$r7 = /^[ \t\r\n]/

  const peg$e0 = peg$literalExpectation('{{', false)
  const peg$e1 = peg$literalExpectation('}}', false)
  const peg$e2 = peg$anyExpectation()
  const peg$e3 = peg$literalExpectation('(', false)
  const peg$e4 = peg$literalExpectation(')', false)
  const peg$e5 = peg$literalExpectation('?', false)
  const peg$e6 = peg$literalExpectation(':', false)
  const peg$e7 = peg$literalExpectation('??', false)
  const peg$e8 = peg$literalExpectation('||', false)
  const peg$e9 = peg$literalExpectation('&&', false)
  const peg$e10 = peg$literalExpectation('==', false)
  const peg$e11 = peg$literalExpectation('!=', false)
  const peg$e12 = peg$literalExpectation('<=', false)
  const peg$e13 = peg$literalExpectation('>=', false)
  const peg$e14 = peg$classExpectation(['<', '>'], false, false, false)
  const peg$e15 = peg$classExpectation(['+', '-'], false, false, false)
  const peg$e16 = peg$classExpectation(['%', '*', '/'], false, false, false)
  const peg$e17 = peg$literalExpectation('!', false)
  const peg$e18 = peg$literalExpectation('=', false)
  const peg$e19 = peg$literalExpectation('-', false)
  const peg$e20 = peg$literalExpectation('.', false)
  const peg$e21 = peg$literalExpectation('[', false)
  const peg$e22 = peg$literalExpectation(']', false)
  const peg$e23 = peg$literalExpectation(',', false)
  const peg$e24 = peg$classExpectation([['a', 'z'], ['A', 'Z'], '_'], false, false, false)
  const peg$e25 = peg$classExpectation(
    [['a', 'z'], ['A', 'Z'], ['0', '9'], '_'],
    false,
    false,
    false,
  )
  const peg$e26 = peg$literalExpectation('true', false)
  const peg$e27 = peg$literalExpectation('false', false)
  const peg$e28 = peg$literalExpectation('null', false)
  const peg$e29 = peg$classExpectation([['0', '9']], false, false, false)
  const peg$e30 = peg$classExpectation(['e', 'E'], false, false, false)
  const peg$e31 = peg$literalExpectation("'", false)
  const peg$e32 = peg$literalExpectation('"', false)
  const peg$e33 = peg$literalExpectation('\\', false)
  const peg$e34 = peg$classExpectation([' ', '\t', '\r', '\n'], false, false, false)

  function peg$f0(segs) {
    return templateNode(segs)
  }
  function peg$f1(at, e) {
    return holeNode(at, e)
  }
  function peg$f2(cs) {
    return textNode(cs)
  }
  function peg$f3(ch) {
    return str(ch)
  }
  function peg$f4(e) {
    return parenNode(e)
  }
  function peg$f5(cond, t) {
    return ternaryNode(cond, t)
  }
  function peg$f6(h, t) {
    return binaryNode(h, t)
  }
  function peg$f7(h, t) {
    return binaryNode(h, t)
  }
  function peg$f8(h, t) {
    return binaryNode(h, t)
  }
  function peg$f9(h, t) {
    return binaryNode(h, t)
  }
  function peg$f10(h, t) {
    return binaryNode(h, t)
  }
  function peg$f11(h, t) {
    return binaryNode(h, t)
  }
  function peg$f12(h, t) {
    return binaryNode(h, t)
  }
  function peg$f13(at, op, operand) {
    return unaryNode(at, op, operand)
  }
  function peg$f14(base, sfx) {
    return postfixNode(base, sfx)
  }
  function peg$f15(e) {
    return parenNode(e)
  }
  function peg$f16(op) {
    return str(op)
  }
  function peg$f17(op) {
    return str(op)
  }
  function peg$f18(op) {
    return str(op)
  }
  function peg$f19(op) {
    return str(op)
  }
  function peg$f20(op) {
    return str(op)
  }
  function peg$f21(op) {
    return str(op)
  }
  function peg$f22(op) {
    return str(op)
  }
  function peg$f23(op) {
    return str(op)
  }
  function peg$f24(at, n) {
    return memberSuffix(at, n)
  }
  function peg$f25(at) {
    return projectSuffix(at)
  }
  function peg$f26(at, e) {
    return indexSuffix(at, e)
  }
  function peg$f27(at, args) {
    return callSuffix(at, args)
  }
  function peg$f28(h, t) {
    return argList(h, t)
  }
  function peg$f29(at, n) {
    return nameNode(at, n)
  }
  function peg$f30(h, t) {
    return str(h, t)
  }
  function peg$f31(at) {
    return nullNode(at)
  }
  function peg$f32(at, v) {
    return boolNode(at, v)
  }
  function peg$f33(at, i, f, e) {
    return numberNode(at, i, f, e)
  }
  function peg$f34(d) {
    return str(d)
  }
  function peg$f35(d) {
    return str('.', d)
  }
  function peg$f36(e, s, d) {
    return str(e, s, d)
  }
  function peg$f37(at, cs) {
    return stringNode(at, cs)
  }
  function peg$f38(at, cs) {
    return stringNode(at, cs)
  }
  function peg$f39(ch) {
    return str(ch)
  }
  function peg$f40(ch) {
    return str(ch)
  }
  function peg$f41(ch) {
    return escapeChar(ch)
  }
  function peg$f42() {
    return offset()
  }
  let peg$currPos = options.peg$currPos | 0
  let peg$savedPos = peg$currPos
  const peg$posDetailsCache = [{ line: 1, column: 1 }]
  let peg$maxFailPos = peg$currPos
  let peg$maxFailExpected = options.peg$maxFailExpected || []
  let peg$silentFails = options.peg$silentFails | 0

  let peg$result

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error('Can\'t start parsing from rule "' + options.startRule + '".')
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule]
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos)
  }

  function offset() {
    return peg$savedPos
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    }
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos)
  }

  function expected(description, location) {
    location = location !== undefined ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location,
    )
  }

  function error(message, location) {
    location = location !== undefined ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location)
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos)
    if (cp === undefined) {
      return ''
    }
    return String.fromCodePoint(cp)
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: 'literal', text, ignoreCase }
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: 'class', parts, inverted, ignoreCase, unicode }
  }

  function peg$anyExpectation() {
    return { type: 'any' }
  }

  function peg$endExpectation() {
    return { type: 'end' }
  }

  function peg$otherExpectation(description) {
    return { type: 'other', description }
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos]
    let p

    if (details) {
      return details
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1
      } else {
        p = pos
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p]
      details = {
        line: details.line,
        column: details.column,
      }

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++
          details.column = 1
        } else {
          details.column++
        }

        p++
      }

      peg$posDetailsCache[pos] = details

      return details
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos)
    const endPosDetails = peg$computePosDetails(endPos)

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    }
    if (offset && peg$source && typeof peg$source.offset === 'function') {
      res.start = peg$source.offset(res.start)
      res.end = peg$source.offset(res.end)
    }
    return res
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) {
      return
    }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos
      peg$maxFailExpected = []
    }

    peg$maxFailExpected.push(expected)
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location)
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location,
    )
  }

  function peg$parseTemplate() {
    let s0, s1, s2

    s0 = peg$currPos
    s1 = []
    s2 = peg$parseSegment()
    while (s2 !== peg$FAILED) {
      s1.push(s2)
      s2 = peg$parseSegment()
    }
    s2 = peg$parseEOF()
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0
      s0 = peg$f0(s1)
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseSegment() {
    let s0

    s0 = peg$parseHole()
    if (s0 === peg$FAILED) {
      s0 = peg$parseTextRun()
    }

    return s0
  }

  function peg$parseHole() {
    let s0, s1, s2, s3, s4, s5, s6

    s0 = peg$currPos
    if (input.substr(peg$currPos, 2) === peg$c0) {
      s1 = peg$c0
      peg$currPos += 2
    } else {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e0)
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_()
      s3 = peg$parseAt()
      s4 = peg$parseTernary()
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_()
        if (input.substr(peg$currPos, 2) === peg$c1) {
          s6 = peg$c1
          peg$currPos += 2
        } else {
          s6 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$e1)
          }
        }
        if (s6 !== peg$FAILED) {
          peg$savedPos = s0
          s0 = peg$f1(s3, s4)
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseTextRun() {
    let s0, s1, s2

    s0 = peg$currPos
    s1 = []
    s2 = peg$parseTextChar()
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2)
        s2 = peg$parseTextChar()
      }
    } else {
      s1 = peg$FAILED
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0
      s1 = peg$f2(s1)
    }
    s0 = s1

    return s0
  }

  function peg$parseTextChar() {
    let s0, s1, s2

    s0 = peg$currPos
    s1 = peg$currPos
    peg$silentFails++
    if (input.substr(peg$currPos, 2) === peg$c0) {
      s2 = peg$c0
      peg$currPos += 2
    } else {
      s2 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e0)
      }
    }
    peg$silentFails--
    if (s2 === peg$FAILED) {
      s1 = undefined
    } else {
      peg$currPos = s1
      s1 = peg$FAILED
    }
    if (s1 !== peg$FAILED) {
      if (input.length > peg$currPos) {
        s2 = input.charAt(peg$currPos)
        peg$currPos++
      } else {
        s2 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$e2)
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0
        s0 = peg$f3(s2)
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseExpressionEntry() {
    let s0, s1, s2

    s0 = peg$currPos
    s1 = peg$parseTernary()
    if (s1 !== peg$FAILED) {
      s2 = peg$parseEOF()
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0
        s0 = peg$f4(s1)
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseTernary() {
    let s0, s1, s2, s3, s4, s5, s6

    s0 = peg$currPos
    s1 = peg$parseCoalesce()
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos
      s3 = peg$parseQMark()
      if (s3 !== peg$FAILED) {
        s4 = peg$parseTernary()
        if (s4 !== peg$FAILED) {
          s5 = peg$parseColon()
          if (s5 !== peg$FAILED) {
            s6 = peg$parseTernary()
            if (s6 !== peg$FAILED) {
              s3 = [s3, s4, s5, s6]
              s2 = s3
            } else {
              peg$currPos = s2
              s2 = peg$FAILED
            }
          } else {
            peg$currPos = s2
            s2 = peg$FAILED
          }
        } else {
          peg$currPos = s2
          s2 = peg$FAILED
        }
      } else {
        peg$currPos = s2
        s2 = peg$FAILED
      }
      if (s2 === peg$FAILED) {
        s2 = null
      }
      peg$savedPos = s0
      s0 = peg$f5(s1, s2)
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseCoalesce() {
    let s0, s1, s2, s3, s4, s5

    s0 = peg$currPos
    s1 = peg$parseOr()
    if (s1 !== peg$FAILED) {
      s2 = []
      s3 = peg$currPos
      s4 = peg$parseCoalesceOp()
      if (s4 !== peg$FAILED) {
        s5 = peg$parseOr()
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5]
          s3 = s4
        } else {
          peg$currPos = s3
          s3 = peg$FAILED
        }
      } else {
        peg$currPos = s3
        s3 = peg$FAILED
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3)
        s3 = peg$currPos
        s4 = peg$parseCoalesceOp()
        if (s4 !== peg$FAILED) {
          s5 = peg$parseOr()
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5]
            s3 = s4
          } else {
            peg$currPos = s3
            s3 = peg$FAILED
          }
        } else {
          peg$currPos = s3
          s3 = peg$FAILED
        }
      }
      peg$savedPos = s0
      s0 = peg$f6(s1, s2)
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseOr() {
    let s0, s1, s2, s3, s4, s5

    s0 = peg$currPos
    s1 = peg$parseAnd()
    if (s1 !== peg$FAILED) {
      s2 = []
      s3 = peg$currPos
      s4 = peg$parseOrOp()
      if (s4 !== peg$FAILED) {
        s5 = peg$parseAnd()
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5]
          s3 = s4
        } else {
          peg$currPos = s3
          s3 = peg$FAILED
        }
      } else {
        peg$currPos = s3
        s3 = peg$FAILED
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3)
        s3 = peg$currPos
        s4 = peg$parseOrOp()
        if (s4 !== peg$FAILED) {
          s5 = peg$parseAnd()
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5]
            s3 = s4
          } else {
            peg$currPos = s3
            s3 = peg$FAILED
          }
        } else {
          peg$currPos = s3
          s3 = peg$FAILED
        }
      }
      peg$savedPos = s0
      s0 = peg$f7(s1, s2)
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseAnd() {
    let s0, s1, s2, s3, s4, s5

    s0 = peg$currPos
    s1 = peg$parseEquality()
    if (s1 !== peg$FAILED) {
      s2 = []
      s3 = peg$currPos
      s4 = peg$parseAndOp()
      if (s4 !== peg$FAILED) {
        s5 = peg$parseEquality()
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5]
          s3 = s4
        } else {
          peg$currPos = s3
          s3 = peg$FAILED
        }
      } else {
        peg$currPos = s3
        s3 = peg$FAILED
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3)
        s3 = peg$currPos
        s4 = peg$parseAndOp()
        if (s4 !== peg$FAILED) {
          s5 = peg$parseEquality()
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5]
            s3 = s4
          } else {
            peg$currPos = s3
            s3 = peg$FAILED
          }
        } else {
          peg$currPos = s3
          s3 = peg$FAILED
        }
      }
      peg$savedPos = s0
      s0 = peg$f8(s1, s2)
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseEquality() {
    let s0, s1, s2, s3, s4, s5

    s0 = peg$currPos
    s1 = peg$parseRelational()
    if (s1 !== peg$FAILED) {
      s2 = []
      s3 = peg$currPos
      s4 = peg$parseEqualityOp()
      if (s4 !== peg$FAILED) {
        s5 = peg$parseRelational()
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5]
          s3 = s4
        } else {
          peg$currPos = s3
          s3 = peg$FAILED
        }
      } else {
        peg$currPos = s3
        s3 = peg$FAILED
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3)
        s3 = peg$currPos
        s4 = peg$parseEqualityOp()
        if (s4 !== peg$FAILED) {
          s5 = peg$parseRelational()
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5]
            s3 = s4
          } else {
            peg$currPos = s3
            s3 = peg$FAILED
          }
        } else {
          peg$currPos = s3
          s3 = peg$FAILED
        }
      }
      peg$savedPos = s0
      s0 = peg$f9(s1, s2)
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseRelational() {
    let s0, s1, s2, s3, s4, s5

    s0 = peg$currPos
    s1 = peg$parseAdditive()
    if (s1 !== peg$FAILED) {
      s2 = []
      s3 = peg$currPos
      s4 = peg$parseRelationalOp()
      if (s4 !== peg$FAILED) {
        s5 = peg$parseAdditive()
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5]
          s3 = s4
        } else {
          peg$currPos = s3
          s3 = peg$FAILED
        }
      } else {
        peg$currPos = s3
        s3 = peg$FAILED
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3)
        s3 = peg$currPos
        s4 = peg$parseRelationalOp()
        if (s4 !== peg$FAILED) {
          s5 = peg$parseAdditive()
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5]
            s3 = s4
          } else {
            peg$currPos = s3
            s3 = peg$FAILED
          }
        } else {
          peg$currPos = s3
          s3 = peg$FAILED
        }
      }
      peg$savedPos = s0
      s0 = peg$f10(s1, s2)
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseAdditive() {
    let s0, s1, s2, s3, s4, s5

    s0 = peg$currPos
    s1 = peg$parseMultiplicative()
    if (s1 !== peg$FAILED) {
      s2 = []
      s3 = peg$currPos
      s4 = peg$parseAdditiveOp()
      if (s4 !== peg$FAILED) {
        s5 = peg$parseMultiplicative()
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5]
          s3 = s4
        } else {
          peg$currPos = s3
          s3 = peg$FAILED
        }
      } else {
        peg$currPos = s3
        s3 = peg$FAILED
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3)
        s3 = peg$currPos
        s4 = peg$parseAdditiveOp()
        if (s4 !== peg$FAILED) {
          s5 = peg$parseMultiplicative()
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5]
            s3 = s4
          } else {
            peg$currPos = s3
            s3 = peg$FAILED
          }
        } else {
          peg$currPos = s3
          s3 = peg$FAILED
        }
      }
      peg$savedPos = s0
      s0 = peg$f11(s1, s2)
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseMultiplicative() {
    let s0, s1, s2, s3, s4, s5
